# chatserver

./: README.md  autobuild.sh
include/: public.hpp
include/server/: chatserver.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessage.hpp  offlinemessagemodel.hpp  usermodel.hpp
include/server/redis/: redis.hpp
mprpc/: CMakeLists.txt
mprpc/example/: user.pb.cc  user.pb.h  user.proto
mprpc/example/callee/: CMakeLists.txt  userservice.cc
mprpc/example/caller/: CMakeLists.txt  callusersevice.cc
mprpc/src/: MprpcApplication.cc  MprpcChannel.cc  MprpcConfig.cc  MprpcController.cc  MprpcProvider.cc  logger.cc  mprpc.pb.cc  mprpc.proto  zookeeperutils.cc
mprpc/src/include/: MprpcApplication.h  MprpcChannel.h  MprpcConfig.h  MprpcController.h  MprpcProvider.h  lockqueue.h  logger.h  mprpc.pb.h  zookeeperutils.h
mprpc/test/: a.out  main.cc  test.pb.cc  test.pb.h
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
test/testjson/: testjson.cpp
test/testmuduo/: Makefile  cmake_install.cmake
zxjchatserver/: CMakeLists.txt
zxjchatserver/src/: CMakeLists.txt
zxjchatserver/src/server/: CMakeLists.txt  chat.proto  chatserver.cpp  chatservice.cpp  main.cpp
zxjchatserver/src/server/db/: db.cpp
zxjchatserver/src/server/model/: friendmodel.cpp  group.cpp  groupmodel.cpp  offlinemessagemodel.cpp
zxjchatserver/src/server/redis/: redis.cpp
zxjchatserver/src/userserver/: CMakeLists.txt  chat.pb.cc  main.cc  userservice.cc
(+17 files in other folders)
